add hubname in workspace select in annouc modal, change pass,edit profile form with validation and api func,change password, profile settings in web app along with routing and nvigation in header,merge, rem query params in forgot pass fun

--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -8,7 +8,7 @@
       <form class="w-75 mx-auto p-4" name="resetPassForm" (ngSubmit)="resetPassword()" [formGroup]="resetPassForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
-          <input matInput [type]="hidePass?'password':'text'" formControlName="pswd">
+          <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" required>
           <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}" class="fas"></i>
           <mat-error>
             Password is required
@@ -16,7 +16,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Confirm Password</mat-label>
-          <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd">
+          <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" required>
           <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}" class="fas"></i>
           <mat-error *ngIf="resetPassForm.get('confirmPswd')!.hasError('required')">
             Confirm Password is required
