--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -9,7 +9,7 @@
           <div class="card-header">
             My User Profile
             <div class="float-right">
-              <i class="fas fa-edit curs-ptr" (click)="openModal(editProfile)"></i>
+              <i class="fas fa-edit curs-ptr" matTooltip="Edit Profile" (click)="openModal(editProfile)"></i>
             </div>
           </div>
           <div class="card-body">
@@ -37,7 +37,7 @@
           <div class="card-header">
             Password
             <div class="float-right">
-              <i class="fas fa-edit curs-ptr" (click)="openModal(editPassword)"></i>
+              <i class="fas fa-edit curs-ptr" matTooltip="Edit Password" (click)="openModal(editPassword)"></i>
             </div>
           </div>
           <div class="card-body">
@@ -55,61 +55,100 @@
 <!-- edit profile modal -->
 <ng-template #editProfile let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Edit Profile Details</h4>
+    <h4 class="modal-title">Edit Profile Details</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>First Name</mat-label>
-      <input matInput type="text" placeholder="First Name">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Last Name</mat-label>
-      <input matInput type="text" placeholder="Last Name">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Email</mat-label>
-      <input matInput type="text" placeholder="Email">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Language</mat-label>
-      <mat-select>
-        <mat-option value="abc">Abc</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Time Zone</mat-label>
-      <mat-select>
-        <mat-option value="abc">abc</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="modal-footer">
-    <button type="button" ngbAutofocus class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
+  <form name="profileForm" (ngSubmit)="updProfile()" [formGroup]="profileForm" novalidate>
+    <div class="modal-body" ngbAutofocus>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>First Name</mat-label>
+        <input matInput type="text" placeholder="First Name" formControlName="firstName" required>
+        <mat-error *ngIf="profileForm.get('firstName')!.hasError('required')">>
+          First Name is required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Last Name</mat-label>
+        <input matInput type="text" placeholder="Last Name" formControlName="lastName" required>
+        <mat-error *ngIf="profileForm.get('lastName')!.hasError('required')">
+          Last Name is required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Email</mat-label>
+        <input matInput type="text" placeholder="Email" formControlName="email" required>
+        <mat-error *ngIf="profileForm.get('email')!.hasError('required')">>
+          Email required
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Language</mat-label>
+        <mat-select formControlName="language">
+          <mat-option value="abc">Abc</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Time Zone</mat-label>
+        <mat-select formControlName="timeZone">
+          <mat-option value="abc">abc</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" [disabled]="profileForm!.invalid || profLoading">
+        <app-loader [type]="'btn'" *ngIf="profLoading"></app-loader> <!-- loader -->
+        Update Profile
+      </button>
+    </div>
+  </form>
 </ng-template>
 
-<!-- edit profile modal -->
+<!-- edit password modal -->
 <ng-template #editPassword let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Change Password</h4>
+    <h4 class="modal-title">Edit Password</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Password</mat-label>
-      <input matInput type="text" placeholder="Password">
-    </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Confirm Password</mat-label>
-      <input matInput type="text" placeholder="Confirm Password">
-    </mat-form-field>
-  </div>
-  <div class="modal-footer">
-    <button type="button" ngbAutofocus class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-  </div>
+  <form name="chngPassForm" (ngSubmit)="changePassword()" [formGroup]="chngPassForm" novalidate>
+   <div class="modal-body" ngbAutofocus>
+     <mat-form-field appearance="outline" class="w-100">
+       <mat-label>Current Password</mat-label>
+       <input matInput [type]="hideCurPass?'password':'text'" formControlName="currPswd" required>
+       <i matSuffix (click)="hideCurPass = !hideCurPass" [ngClass]="{'fa-eye': hideCurPass, 'fa-eye-slash': !hideCurPass}" class="fas"></i>
+       <mat-error>
+         Current Password is required
+       </mat-error>
+     </mat-form-field>
+     <mat-form-field appearance="outline" class="w-100">
+       <mat-label>Password</mat-label>
+       <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" required>
+       <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}" class="fas"></i>
+       <mat-error>
+         Password is required
+       </mat-error>
+     </mat-form-field>
+     <mat-form-field appearance="outline" class="w-100">
+       <mat-label>Confirm Password</mat-label>
+       <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" required>
+       <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}" class="fas"></i>
+       <mat-error *ngIf="chngPassForm.get('confirmPswd')!.hasError('required')">
+         Confirm Password is required
+       </mat-error>
+       <mat-error *ngIf="!chngPassForm.get('confirmPswd')!.hasError('required') &&
+                          chngPassForm.get('confirmPswd')!.hasError('passwordsNotMatching')">
+         Password and Confirm Password must match
+       </mat-error>
+     </mat-form-field>
+   </div>
+   <div class="modal-footer">
+     <button class="btn btn-primary" [disabled]="chngPassForm!.invalid || passLoading">
+       <app-loader [type]="'btn'" *ngIf="passLoading"></app-loader> <!-- loader -->
+       Update Password
+     </button>
+   </div>
+  </form>
 </ng-template>
