--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand navbar-light bg-white pl-3">
-    <a class="navbar-brand pr-3 border-right py-2" href="javascript:void(0)"><img src="assets/images/logo.png"
-        alt="Hi Force"></a>
+    <a class="navbar-brand pr-3 border-right py-2" href="javascript:void(0)">
+      <img src="assets/images/logo.png" alt="Hi Force"></a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item align-self-center active">
@@ -69,7 +69,9 @@
               </div>
             </h6>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item"><i class="fas fa-user mr-2"></i>My Profile</a>
+            <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My Profile</a>
+            <a class="dropdown-item" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
+            <a class="dropdown-item" [routerLink]="'/web-app/change-password'"><i class="fas fa-lock mr-2"></i>Change Password</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="logout();">
               <i class="fas fa-sign-out-alt mr-2"></i>Logout
