--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
       <form class="w-75 mx-auto p-4" name="forgPassForm" (ngSubmit)="forgotPassword()" [formGroup]="forgPassForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email">
+          <input matInput formControlName="email" required>
           <i matSuffix class="fas fa-envelope"></i>
           <mat-error *ngIf="forgPassForm.get('email')!.hasError('required')">
             Email is required
