--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,7 +8,7 @@
       <form class="w-75 mx-auto p-4" name="loginForm" (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email">
+          <input matInput formControlName="email" required>
           <i matSuffix class="fas fa-envelope"></i>
           <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
             Email is required
@@ -20,7 +20,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
-          <input matInput [type]="hide?'password':'text'" formControlName="password">
+          <input matInput [type]="hide?'password':'text'" formControlName="password" required>
           <i matSuffix (click)="hide = !hide" [ngClass]="{'fa-eye': hide, 'fa-eye-slash': !hide}" class="fas"></i>
           <mat-error>
             Password is required
