--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -52,8 +52,11 @@
                     <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
                       <i class="fas fa-edit mr-1"></i>Edit
                     </a>
-                    <a class="dropdown-item" (click)="delCatg({})">
-                      <i class="fas fa-trash-alt mr-1"></i>Delete
+                    <a class="dropdown-item" (click)="deactCatg(catg)" *ngIf="catg.isActive">
+                      <i class="fas fa-trash-alt mr-1"></i>Deactivate
+                    </a>
+                    <a class="dropdown-item" (click)="actCatg(catg)" *ngIf="!catg.isActive">
+                      <i class="fas fa-plus mr-1"></i>Activate
                     </a>
                   </div>
                 </div>
@@ -118,7 +121,7 @@
                     {{tag.name}}
                   </td>
                   <td class="text-hi-dark-grey">No Status</td>
-                  <td>No Date</td>
+                  <td>{{tag.updatedDate.split('T')[0]}}</td>
                 </tr>
               </tbody>
             </table>
@@ -165,8 +168,17 @@
           </div>
         </div>
         <div class="card-header bg-hi-light-grey d-flex">
-          <div class="btn btn-sm btn-light mr-2"><i class="fas fa-trash-alt"></i></div>
-          <div class="btn btn-sm btn-light" (click)="updTagModal(editTag)"><i class="fas fa-edit"></i></div>
+          <div class="btn btn-sm btn-light mr-2" (click)="deactTag(rowInfo)">
+            <!-- *ngIf="rowInfo.isActive" -->
+            <i class="fas fa-trash-alt"></i>
+          </div>
+          <div class="btn btn-sm btn-light mr-2" (click)="actTag(rowInfo)">
+            <!-- *ngIf="!rowInfo.isActive" -->
+            <i class="fas fa-plus"></i>
+          </div>
+          <div class="btn btn-sm btn-light" (click)="updTagModal(editTag)">
+            <i class="fas fa-edit"></i>
+          </div>
         </div>
         <div class="card-body">
           <div class="doc-details details border-bottom mb-3 pb-3">
@@ -201,13 +213,13 @@
             <div class="created">
               <label class="text-hi-dark-grey mb-0 mt-2">Date Created</label>
               <div class="value">
-                No data
+                {{rowInfo.createdDate.split('T')[0]}}
               </div>
             </div>
             <div class="updated">
               <label class="text-hi-dark-grey mb-0 mt-2">Date Updated</label>
               <div class="value">
-                No data
+                {{rowInfo.updatedDate.split('T')[0]}}
               </div>
             </div>
           </div>
