--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -19,6 +19,11 @@
           </mat-error>
         </mat-form-field>
         <div class="text-center">
+          <a class="float-right" [routerLink]="'/auth/login'">
+              Back to Login
+          </a>
+        </div>
+        <div class="text-center">
           <button aria-label="Forgot Password" [disabled]="forgPassForm!.invalid || disabled" class="mt-2 btn btn-primary">
             <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
             Forgot Password
