--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -71,7 +71,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My Profile</a>
             <a class="dropdown-item" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
-            <a class="dropdown-item" [routerLink]="'/web-app/change-password'"><i class="fas fa-lock mr-2"></i>Change Password</a>
+            <a class="dropdown-item" (click)="openModal()"><i class="fas fa-lock mr-2"></i>Change Password</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="logout();">
               <i class="fas fa-sign-out-alt mr-2"></i>Logout
