--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -53,7 +53,7 @@
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
             data-toggle="dropdown" aria-expanded="false">
             <img src="assets/images/avatar.png">
-              <span class="align-middle">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</span>
+            <span class="align-middle">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</span>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
             <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
@@ -69,9 +69,10 @@
               </div>
             </h6>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My Profile</a>
+            <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My
+              Profile</a>
             <a class="dropdown-item" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
-            <a class="dropdown-item" (click)="openModal()"><i class="fas fa-lock mr-2"></i>Change Password</a>
+            <a class="dropdown-item curs-ptr" (click)="openModal()"><i class="fas fa-lock mr-2"></i>Change Password</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="logout();">
               <i class="fas fa-sign-out-alt mr-2"></i>Logout
