--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,12 +1,13 @@
 <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
-<div class="card w-40 mx-auto mt-4">
+<div class="card w-40 mx-auto my-4">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Forgot Password</h4>
   </div>
   <div class="card-body p-5">
     <div *ngIf="forgPassForm">
-      <form class="w-75 mx-auto p-4" name="forgPassForm" (ngSubmit)="forgotPassword()" [formGroup]="forgPassForm" novalidate>
-        <mat-form-field appearance="outline" class="w-100">
+      <form class="w-75 mx-auto p-4" name="forgPassForm" (ngSubmit)="forgotPassword()" [formGroup]="forgPassForm"
+        novalidate>
+        <mat-form-field appearance="outline" class="w-100 input-bottom-padding-0">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" required>
           <i matSuffix class="fas fa-envelope"></i>
@@ -18,13 +19,14 @@
             Please enter a valid email address
           </mat-error>
         </mat-form-field>
-        <div class="text-center">
-          <a class="float-right" [routerLink]="'/auth/login'">
-              Back to Login
+        <div class="text-right">
+          <a style="font-size:12px;" [routerLink]="'/auth/login'">
+            Back to Login
           </a>
         </div>
         <div class="text-center">
-          <button aria-label="Forgot Password" [disabled]="forgPassForm!.invalid || disabled" class="mt-2 btn btn-primary">
+          <button aria-label="Forgot Password" [disabled]="forgPassForm!.invalid || disabled"
+            class="mt-3 btn btn-primary">
             <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
             Forgot Password
           </button>
