--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="text-center mt-4"><img src="assets/images/logo.png" alt="Logo"></div>
-<div class="card w-40 mx-auto mt-4">
+<div class="card w-40 mx-auto my-4">
   <div class="card-header text-center">
     <h4 class="mb-0 font-weight-bold">Login</h4>
   </div>
@@ -18,7 +18,7 @@
             Please enter a valid email address
           </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
+        <mat-form-field appearance="outline" class="w-100 input-bottom-padding-0">
           <mat-label>Password</mat-label>
           <input matInput [type]="hide?'password':'text'" formControlName="password" required>
           <i matSuffix (click)="hide = !hide" [ngClass]="{'fa-eye': hide, 'fa-eye-slash': !hide}" class="fas"></i>
@@ -26,13 +26,13 @@
             Password is required
           </mat-error>
         </mat-form-field>
-        <div class="text-center">
-          <a class="float-right" [routerLink]="'/auth/forgot-password'">
-              Forgot Password?
+        <div class="text-right">
+          <a style="font-size:12px;" [routerLink]="'/auth/forgot-password'">
+            Forgot Password?
           </a>
         </div>
         <div class="text-center">
-          <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="mt-2 btn btn-primary">
+          <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="mt-3 btn btn-primary">
             <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
             LOGIN
           </button>
