wrkspc activate, deactivate, few other small things

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -655,12 +655,13 @@
                 <i class="fas fa-cog"></i>
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsDD">
-                <a class="dropdown-item" (click)="updWrkspcModal(editWorkspace)">Edit</a>
+                <a class="dropdown-item curs-ptr" (click)="updWrkspcModal(editWorkspace)">Edit</a>
                 <a class="dropdown-item">Duplicate</a>
                 <a class="dropdown-item">Lock</a>
-                <a class="dropdown-item">Hide from Experience App Link</a>
+                <a class="dropdown-item">Hide from Workspace App Link</a>
                 <a class="dropdown-item">Tag Categories</a>
-                <a class="dropdown-item text-danger">Delete Experience</a>
+                <a class="dropdown-item curs-ptr" (click)="actWrkspc(selWrkspc)">Activate Workspace</a>
+                <a class="dropdown-item text-danger curs-ptr" (click)="deactWrkspc(selWrkspc)">Deactivate Workspace</a>
               </div>
             </div>
 
