--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -671,7 +671,9 @@
             <div class="card-body" *ngIf="!folderLoading">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-white mb-0 p-0">
-                  <li class="breadcrumb-item">{{selWrkspc.name}}</li>
+                  <li class="breadcrumb-item curs-ptr text-primary" (click)="backFolder()" style="font-size: 16px;"
+                    *ngIf="folderNav.length>0"><i class="fa fa-arrow-left align-self-center"></i></li>
+                  <li class="breadcrumb-item no-before">{{selWrkspc.name}}</li>
                   <li class="breadcrumb-item" *ngFor="let folNav of folderNav">{{folNav.name}}</li>
                 </ol>
               </nav>
@@ -695,11 +697,14 @@
                       <a class="dropdown-item curs-ptr" (click)="editFolder(editFolderModal, folder)">
                         <i class="fas fa-edit mr-1"></i>Edit Item</a>
                       <a class="dropdown-item" href="javascript:void(0)">
-                        <i class="fas fa-clone mr-1"></i>Duplicate Item</a>
+                        <i class="fas fa-clone mr-1"></i>Duplicate Folder</a>
                       <a class="dropdown-item" href="javascript:void(0)">
                         <i class="fas fa-link mr-1"></i>App Link</a>
-                      <a class="dropdown-item curs-ptr text-primary" (click)="delFolder(folder.id)">
-                        <i class="fas fa-trash-alt mr-1"></i>Delete Item</a>
+                      <a class="dropdown-item curs-ptr" (click)="actFolder(folder)" *ngIf="!folder.isActive">
+                        <i class="fas fa-trash-alt mr-1"></i>Activate Folder</a>
+                      <a class="dropdown-item curs-ptr text-primary" (click)="deactFolder(folder)"
+                        *ngIf="folder.isActive">
+                        <i class="fas fa-trash-alt mr-1"></i>Deactivate Folder</a>
                       <a class="dropdown-item" href="javascript:void(0)">
                         <i class="fas fa-folder-plus mr-1"></i>Create New Channel from Folder</a>
                     </div>
