url serializer, reset pass api and rem extra query params , fetch token emaik from query, merge, default redirect to dashboard, show err mssg if no data found in auth api

--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -27,8 +27,8 @@
           </mat-error>
         </mat-form-field>
         <div class="text-center">
-          <button aria-label="Reset Password" [disabled]="resetPassForm!.invalid || disabled" class="mt-2 btn btn-primary">
-            <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
+          <button aria-label="Reset Password" [disabled]="resetPassForm!.invalid || loading" class="mt-2 btn btn-primary">
+            <app-loader [type]="'btn'" *ngIf="loading"></app-loader> <!-- loader -->
             Reset Password
           </button>
         </div>
